--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div id="home-content" class="content-section active-section">
             <section class="hero reveal">
                 <h1>Ronak Singh Raina</h1>
+                <h2>ljvkndrsk.gje5b,rsgunhslu5ergbh</h2>
                 <h2>Theoretical Physics Enthusiast</h2>
                 <p class="subtitle">Exploring the fundamental nature of reality through quantum mechanics, relativity,
                     and computational physics</p>
