--- a/blogs_section/blogs_main.html
+++ b/blogs_section/blogs_main.html
@@ -71,7 +71,7 @@
                     <div class="coming-soon">Coming Soon</div>
 
                     <div class="blog-icon"><i class="fas fa-shuffle"></i></div>
-                    <h3><a class="heading" href="blog_files/noether_theorum.html">Entropy Isn't Just 'Disorder': A Deeper Look at the Arrow of Time</a></h3>
+                    <h3><a class="heading" href="blog_files/entropy.html">Entropy Isn't Just 'Disorder': A Deeper Look at the Arrow of Time</a></h3>
                     <p>A comprehensive exploration of the profound connection between symmetry and conservation laws,
                         breaking down Emmy Noether's revolutionary theorem in an accessible way.</p>
                     <div class="blog-meta">
