--- a/blogs_section/blog_files/entropy.html
+++ b/blogs_section/blog_files/entropy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Entropy Isn't Just 'Disorder' | A Mathematical Journey</title>
     
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="entropy.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
